# etd_dash_service

./: .dockerignore  .env.example  .gitignore  Dockerfile  DockerfileLocal  Jenkinsfile  README.md  celeryconfig.py  celeryconfig.py.example  change_id.sh  docker-compose-local.yml  gunicorn.conf.py  pyproject.toml  requirements.txt  supervisord.conf
.github/workflows/: pytest.yml
data/in/proquest2023071318-993578-gsd/: mets.xml
etd/: __init__.py  constants.py  logging_config.py  vireo.py  worker.py  xfer_files.py
lib/: ltstools.py  notify.py
scripts/: healthcheck.py  invoke-task.py  readiness.py
tasks/: tasks.py
tests/data/in/proquest2023071720-993578-gsd/: mets_before.xml
tests/integration/: test_integration.py  test_notify.py
tests/unit/: test_tasks.py  test_worker.py
