[project]
name = "etd_dash_service"
version = "0.0.1"

[tool.pytest.ini_options]
pythonpath = [
  ".", "etd"
]

[tool.project-paths]
dir_unit_out = "tests/unit/out/"
dir_int_out = "tests/integration/out/"

[tool.setuptools]
packages = ["etd"]

[tool.pytest.ini_options]
addopts = ["--ignore=tests/unit/test_worker.py]